--- a/src/Style/Content.css
+++ b/src/Style/Content.css
@@ -1,5 +1,25 @@
 .editable-row .ant-form-explain {
-    position: absolute;
-    font-size: 12px;
-    margin-top: -4px;
-  }
+  position: absolute;
+  font-size: 12px;
+  margin-top: -4px;
+}
+
+.icon {
+  font-size: 1.2rem;
+}
+.icon-div{
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+.ant-table-pagination.ant-pagination{
+  margin: 1rem;
+}
+.ant-table-wrapper{
+  width: 100%;
+  min-height: 70vh;  
+}
+.content{
+  margin: 2rem;
+  background: #fff;
+}
